--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <body>
     <header>聊天机器人</header>
     <section id="record">
-      <!--TODO：语音气泡、头像、时间-->
     </section>
     <footer>
       <ul>
@@ -25,8 +24,9 @@
       </ul>
     </footer>
     <script src="lib/jQuery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/robot.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/Controller.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/Robot.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/User.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/controller.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
       var controller = new Controller()
       controller.init()
